--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/http": "4.4.4",
     "@angular/platform-browser": "4.4.4",
     "@angular/platform-browser-dynamic": "4.4.4",
+    "@ionic-native/app-version": "^4.3.2",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/device": "^4.3.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/sqlite": "^4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "cordova-android": "6.3.0",
+    "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -50,7 +53,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-app-version": {}
     },
     "platforms": [
       "android"
